--- a/src/index.html
+++ b/src/index.html
@@ -15,16 +15,7 @@
         <label for="takeTime">ساعت انتخاب واحد</label>
     </div>
     <div class="flex flex-col justify-center items-center">
-        <table id="rowsTable" class="w-100 my-4">
-            <tr>
-                <td class="flex flex-row space-x-1">
-                    <input id="inp_1_1" class="border text-lg w-8 px-1 rounded" placeholder="__" data-slots="_" data-accept="\d" size="2">
-                    <input id="inp_1_2" class="border text-lg w-8 px-1 rounded" placeholder="__" data-slots="_" data-accept="\d" size="2">
-                    <input id="inp_1_3" class="border text-lg w-11 px-1 rounded" placeholder="___" data-slots="_" data-accept="\d" size="3">
-                    <input id="inp_1_4" class="border text-lg w-8 px-1 rounded" placeholder="__" data-slots="_" data-accept="\d" size="2">
-                </td>
-            </tr>
-        </table>
+        <table id="rowsTable" class="w-100 my-4"></table>
         <div class="flex flex-row justify-between w-full">
             <button id="submit" class="text-xs cursor-pointer border px-2 py-1 rounded-md bg-lime-500">ثبت</button>
             <button id="addRow" class="text-xs cursor-pointer border px-2 py-1 rounded-md bg-cyan-400">افزودن سطر</button>
