--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <title>auto GTC</title>
@@ -11,27 +11,27 @@
 <body class="w-[200px] flex flex-col justify-center items-center p-4">
     <div class="w-full px-2 py-1 space-y-2 border-2 rounded-md flex flex-col mb-3">
         <div class=" flex justify-between items-center">
+            <span>وضعیت حساب:</span>
             <span id="accountStatus" >غیر فعال</span>
-            <span>:وضعیت حساب</span>
         </div>
         <div class="flex justify-between items-center">
+            <span>روز های باقی مانده:</span>
             <span id="daysLeft">0</span>
-            <span>:روز های باقی مانده</span>
         </div>
-        <button id="loginBtn" class="text-xs cursor-pointer border px-2 py-1 rounded-md bg-cyan-300">فعال سازی</button>
+        <button id="loginBtn" class="text-xs cursor-pointer border px-2 py-1 rounded-md bg-cyan-300 ">فعال سازی</button>
     </div>
 
 
     <div class="flex flex-row justify-center content-center space-x-2">
-        <input class="w-12 text-blue-600 px-1" id="takeTime" placeholder="__:__" data-slots="_" data-accept="\d" size="4">
         <label for="takeTime">ساعت انتخاب واحد</label>
+        <input class="w-12 text-blue-600 px-1" id="takeTime" placeholder="__:__" data-slots="_" data-accept="\d" size="4">
     </div>
 
     <div class="flex flex-col justify-center items-center">
         <table id="rowsTable" class="w-100 my-4"></table>
         <div class="flex flex-row justify-between w-full">
-            <button id="submit" class="text-xs cursor-pointer border px-2 py-1 rounded-md bg-lime-500">ثبت</button>
             <button id="addRow" class="text-xs cursor-pointer border px-2 py-1 rounded-md bg-cyan-400">افزودن سطر</button>
+            <button id="submit" class="text-xs cursor-pointer border px-2 py-1 rounded-md bg-lime-500">ثبت</button>
         </div>
     </div>
 
