login to activeCode

--- a/src/activeAccount.html
+++ b/src/activeAccount.html
@@ -21,17 +21,17 @@
         </div>
     </div>
 
-    <div class="flex items-center">
-        <label for="activeCodeInp"> کد فعال سازی:</label>
-        <input id="activeCodeInp" class="border px-1 rounded h-7 w-24 text-base" placeholder="00000000">
+    <div class="space-y-1">
+        <div class="flex items-center">
+            <label for="activeCodeInp"> کد فعال سازی:</label>
+            <input id="activeCodeInp" class="border px-1 rounded h-7 w-24 text-base" placeholder="00000000">
+        </div>
+        <button id="checkActiveCodeBtn" class="text-xs cursor-pointer border px-2 py-1 rounded-md bg-cyan-300 ">برسی کد فعال سازی</button>
     </div>
 
-    <div class="my-2">
+    <div class="my-2 space-y-1">
         <label for="phoneInp"> شماره همراه:</label>
-        <input id="phoneInp" class="border px-1 rounded h-7 w-32 text-base" placeholder="09221231213" >
-    </div>
-
-    <div class="mb-4 flex flex-col space-y-2" id="checkPhoneContainer">
+        <input id="phoneInp" class="border px-1 rounded h-7 w-28 text-sm" placeholder="09221231213" >
         <button id="sendPhoneBtn" class="text-xs cursor-pointer border px-2 py-1 rounded-md bg-cyan-300 ">برسی شماره</button>
     </div>
 
