--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 
     <span class="text-green-600 mt-4" id="statusSuccess"></span>
 
-    <span id="testSpan"></span>
+    <span id="LOG_SPAN"></span>
 
     <script src="js/popup.js"></script>
 </body>
