don't allow submitting if not active

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
         </div>
     </div>
 
+    <span class="text-red-600 mt-4" id="statusError"></span>
     <span class="text-green-600 mt-4" id="statusSuccess"></span>
 
     <span id="LOG_SPAN"></span>
