--- a/src/activeAccount.html
+++ b/src/activeAccount.html
@@ -41,7 +41,7 @@
     </div>
 
     <span class="text-red-600 mt-4" id="statusError"></span>
-    <span class="text-green-600 mt-4" id="statusSuccess"></span>
+    <span class="text-green-600" id="statusSuccess"></span>
 
     <div class="text-right ">
         <span>راهنما:</span>
