--- a/src/index.html
+++ b/src/index.html
@@ -36,10 +36,10 @@
     </div>
 
     <span class="text-red-600 mt-4" id="statusError"></span>
-    <span class="text-green-600 mt-4" id="statusSuccess"></span>
-
+    <span class="text-green-600" id="statusSuccess"></span>
     <span id="LOG_SPAN"></span>
 
+    <a href="https://gtc.m3m.dev/aboutUs" target="_blank">ارتباط با ما</a>
     <script src="js/popup.js"></script>
 </body>
 </html>
